@@ -7,6 +7,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.concurrent.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,18 +23,14 @@ public class CanvasSimulationService {
     private PlayerPositionDTO currentCarrier;
     private BallPositionDTO ball;
     private int possessionTicks = 0;
-    private int spacePassCooldown = 0;
 
     public void startCanvasTestSimulation() {
+
         Random random = new Random();
         List<PlayerPositionDTO> players = new ArrayList<>();
 
-        // HOME team
-        for (int i = 1; i <= 11; i++)
-            players.add(new PlayerPositionDTO(i, "HOME", 10 + random.nextDouble() * 35, 10 + random.nextDouble() * 80));
-        // AWAY team
-        for (int i = 12; i <= 22; i++)
-            players.add(new PlayerPositionDTO(i, "AWAY", 65 + random.nextDouble() * 30, 10 + random.nextDouble() * 80));
+        for (int i = 1; i <= 11; i++) players.add(new PlayerPositionDTO(i, "HOME", 10 + random.nextDouble() * 35, 10 + random.nextDouble() * 80));
+        for (int i = 12; i <= 22; i++) players.add(new PlayerPositionDTO(i, "AWAY", 65 + random.nextDouble() * 30, 10 + random.nextDouble() * 80));
 
         ball = new BallPositionDTO(50, 50);
         currentCarrier = players.get(0);
@@ -42,10 +39,8 @@ public class CanvasSimulationService {
         final int totalTicks = MATCH_DURATION_SECONDS * (1000 / TICK_MS);
 
         scheduler.scheduleAtFixedRate(() -> {
-            if (tick[0] >= totalTicks) {
-                scheduler.shutdown();
-                return;
-            }
+
+            if (tick[0] >= totalTicks) { scheduler.shutdown(); return; }
 
             for (PlayerPositionDTO p : players) {
                 boolean attacksRight = p.getTeam().equals("HOME");
@@ -54,21 +49,15 @@ public class CanvasSimulationService {
 
             possessionTicks++;
             if (possessionTicks > 8) {
-                tryPassToPlayer(currentCarrier, players, random);
+                PlayerPositionDTO next = findNearbyTeammate(currentCarrier, players);
+                if (next != null) currentCarrier = next;
                 possessionTicks = 0;
-            }
-
-            spacePassCooldown++;
-            if (spacePassCooldown > 10 && random.nextDouble() < 0.2) {
-                trySpacePass(currentCarrier, players, random);
-                spacePassCooldown = 0;
             }
 
             tryFinishAttack(currentCarrier, players, random);
 
-            // Ball lags za nosiocem
-            ball.setX(ball.getX() + (currentCarrier.getX() - ball.getX()) * 0.22);
-            ball.setY(ball.getY() + (currentCarrier.getY() - ball.getY()) * 0.22);
+            ball.setX(currentCarrier.getX());
+            ball.setY(currentCarrier.getY());
 
             GameStateDTO state = new GameStateDTO(tick[0] / (1000 / TICK_MS), new ArrayList<>(players), ball);
             webSocketHandler.broadcastEvent(state);
@@ -77,8 +66,10 @@ public class CanvasSimulationService {
         }, 0, TICK_MS, TimeUnit.MILLISECONDS);
     }
 
+    // =============================================
     private void movePlayerByRole(PlayerPositionDTO p, List<PlayerPositionDTO> players,
                                   Random random, boolean attacksRight) {
+
         int id = p.getId();
 
         if (id == 1 || id == 12) moveGoalkeeper(p, random, attacksRight);
@@ -89,22 +80,18 @@ public class CanvasSimulationService {
         else if (id == 7 || id == 11 || id == 19 || id == 20) moveWinger(p, players, random, attacksRight);
         else if (id == 9 || id == 10 || id == 21 || id == 22) moveStriker(p, players, random, attacksRight);
 
-        if ((p.getId() >= 6 && p.getId() <= 11) || (p.getId() >= 17 && p.getId() <= 22)) {
-            pullTowardsBall(p, ball, random);
-        }
-
-        avoidCrowding(p, players, random);
-        applyIdleMovement(p, random);
+        avoidCrowding(p, players, random);      // ← jača razdaljina
+        applyIdleMovement(p, random);           // ← stalno kretanje
     }
 
-    // ==================== GOLMAN ====================
+    // ================== GOLMANI ==================
     private void moveGoalkeeper(PlayerPositionDTO gk, Random random, boolean attacksRight) {
         double goalX = attacksRight ? 6 : 94;
-        gk.setX(clamp(goalX + (random.nextDouble() - 0.5) * 5));
-        gk.setY(clamp(48 + (random.nextDouble() - 0.5) * 12));
+        gk.setX(clamp(goalX + (random.nextDouble() - 0.5) * 6));
+        gk.setY(clamp(48 + (random.nextDouble() - 0.5) * 14));
     }
 
-    // ==================== BEKOVI ====================
+    // ================== BEKOVI ==================
     private void moveFullback(PlayerPositionDTO fb, List<PlayerPositionDTO> players, Random random,
                               boolean attacksRight, boolean isRightBack) {
         double minX = attacksRight ? 12 : 62;
@@ -112,211 +99,166 @@ public class CanvasSimulationService {
         double preferredY = isRightBack ? 88 : 12;
 
         PlayerPositionDTO target = findTargetOpponent(fb, players, random, attacksRight);
-        double dx = target != null ? target.getX() - fb.getX() : (attacksRight ? 5 : -5);
+
+        double dx = target != null ? target.getX() - fb.getX() : (attacksRight ? 6 : -6);
         double dy = preferredY - fb.getY();
+
+        if (target != null) {
+            double targetDy = target.getY() - fb.getY();
+            if (Math.abs(target.getY() - preferredY) < 30) dy = targetDy * 0.55 + dy * 0.45;
+        }
+
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.4) {
-            double speed = 0.7 + random.nextDouble() * 0.3;
-            fb.setX(clamp(fb.getX() + (dx / dist) * speed));
-            fb.setY(clamp(fb.getY() + (dy / dist) * speed));
+        if (dist > 0.6) {
+            double speed = 0.95 + random.nextDouble() * 0.5;
+            double newX = fb.getX() + (dx / dist) * speed;
+            double newY = fb.getY() + (dy / dist) * speed;
+
+            newY = Math.max(preferredY - 20, Math.min(preferredY + 20, newY));
+            newX = Math.max(minX, Math.min(maxX, newX));
+
+            fb.setX(clamp(newX));
+            fb.setY(clamp(newY));
         }
     }
 
-    // ==================== ŠTOPERI ====================
+    // ================== ŠTOPERI (razdvojeni) ==================
     private void moveCenterBack(PlayerPositionDTO cb, List<PlayerPositionDTO> players, Random random, boolean attacksRight) {
         double minX = attacksRight ? 18 : 62;
         double maxX = attacksRight ? 38 : 82;
+
+        // Levi štoper malo levo, desni malo desno
         double preferredY = (cb.getId() == 4 || cb.getId() == 14) ? 42 : 58;
 
         PlayerPositionDTO target = findTargetOpponent(cb, players, random, attacksRight);
+
         double dx = target != null ? target.getX() - cb.getX() : (attacksRight ? 6 : -6);
         double dy = preferredY - cb.getY();
+
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.4) {
-            double speed = 0.6 + random.nextDouble() * 0.3;
-            cb.setX(clamp(cb.getX() + (dx / dist) * speed));
-            cb.setY(clamp(cb.getY() + (dy / dist) * speed));
+        if (dist > 0.6) {
+            double speed = 0.75 + random.nextDouble() * 0.4;
+            double newX = cb.getX() + (dx / dist) * speed;
+            double newY = cb.getY() + (dy / dist) * speed;
+
+            newX = Math.max(minX, Math.min(maxX, newX));
+
+            cb.setX(clamp(newX));
+            cb.setY(clamp(newY));
         }
     }
 
-    // ==================== CENTRALNI VEZNI ====================
+    // ================== CENTRALNI VEZNI ==================
     private void moveCentralMidfielder(PlayerPositionDTO cm, List<PlayerPositionDTO> players, Random random, boolean attacksRight) {
+        double minX = attacksRight ? 38 : 52;
+        double maxX = attacksRight ? 78 : 92;
+
         PlayerPositionDTO target = findTargetOpponent(cm, players, random, attacksRight);
+
         double dx = target != null ? target.getX() - cm.getX() : (attacksRight ? 10 : -10);
-        double dy = (50 - cm.getY()) * 0.7;
+        double dy = (50 - cm.getY()) * 0.8;
+
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.4) {
-            double speed = 0.8 + random.nextDouble() * 0.4;
-            cm.setX(clamp(cm.getX() + (dx / dist) * speed));
+        if (dist > 0.6) {
+            double speed = 1.05 + random.nextDouble() * 0.6;
+            double newX = cm.getX() + (dx / dist) * speed;
+            newX = Math.max(minX, Math.min(maxX, newX));
+
+            cm.setX(clamp(newX));
             cm.setY(clamp(cm.getY() + (dy / dist) * speed));
         }
     }
 
-    // ==================== KRILA ====================
+    // ================== KRILA ==================
     private void moveWinger(PlayerPositionDTO winger, List<PlayerPositionDTO> players, Random random, boolean attacksRight) {
-        double offsideLine = findOffsideLine(players, attacksRight);
+        PlayerPositionDTO target = findTargetOpponent(winger, players, random, attacksRight);
 
-        // targetX povučen ka liniji odbrane + random širenje
-        double targetX = attacksRight ? Math.min(winger.getX() + 1.5 + random.nextDouble(), offsideLine - 1)
-                : Math.max(winger.getX() - 1.5 - random.nextDouble(), offsideLine + 1);
-        double targetY = 25 + random.nextDouble() * 50;
+        double dx = target != null ? target.getX() - winger.getX() : (attacksRight ? 15 : -15);
+        double dy = target != null ? target.getY() - winger.getY() : (50 - winger.getY()) * 0.5;
 
-        double dx = targetX - winger.getX();
-        double dy = targetY - winger.getY();
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.3) {
-            double speed = 1.0 + random.nextDouble() * 0.3;
+        if (dist > 0.6) {
+            double speed = 1.3 + random.nextDouble() * 0.7;
             winger.setX(clamp(winger.getX() + (dx / dist) * speed));
             winger.setY(clamp(winger.getY() + (dy / dist) * speed));
         }
     }
 
-    // ==================== NAPADAČI ====================
+    // ================== NAPADAČI (polako napred) ==================
     private void moveStriker(PlayerPositionDTO striker, List<PlayerPositionDTO> players, Random random, boolean attacksRight) {
         double offsideLine = findOffsideLine(players, attacksRight);
+        double maxForward = attacksRight ? offsideLine + 8 + random.nextDouble() * 12 : offsideLine - 8 - random.nextDouble() * 12;
 
-        // target ka liniji odbrane
-        double targetX = attacksRight ? Math.min(striker.getX() + 2 + random.nextDouble(), offsideLine - 1)
-                : Math.max(striker.getX() - 2 - random.nextDouble(), offsideLine + 1);
-        double targetY = 40 + random.nextDouble() * 20;
+        double baseTargetX = attacksRight ? 62 + random.nextDouble() * 38 : 38 - random.nextDouble() * 38;
+        double baseTargetY = 32 + random.nextDouble() * 36;
 
-        // povremeni šut / dribling ka golu
-        if (random.nextDouble() < 0.18) {
-            double goalX = attacksRight ? 98 : 2;
-            double goalY = 48 + (random.nextDouble()-0.5) * 15;
-            targetX = goalX;
-            targetY = goalY;
+        // nearby threat
+        PlayerPositionDTO nearbyThreat = null;
+        double threatDist = Double.MAX_VALUE;
+        String opponentTeam = attacksRight ? "AWAY" : "HOME";
+
+        for (PlayerPositionDTO p : players) {
+            if (!p.getTeam().equals(opponentTeam)) continue;
+            double d = distance(striker, p);
+            boolean isDangerous = currentCarrier.equals(p) || (attacksRight ? p.getX() > 74 : p.getX() < 26);
+            if (isDangerous && d < threatDist && d < 21) {
+                threatDist = d;
+                nearbyThreat = p;
+            }
+        }
+
+        double targetX = nearbyThreat != null ? nearbyThreat.getX() + (random.nextDouble() - 0.5) * 8 : baseTargetX;
+        double targetY = nearbyThreat != null ? nearbyThreat.getY() + (random.nextDouble() - 0.5) * 8 : baseTargetY;
+
+        // POLAKO NAPRED kad nema pretnje
+        if (nearbyThreat == null) {
+            targetX += attacksRight ? 0.9 : -0.9;
         }
 
         double dx = targetX - striker.getX();
         double dy = targetY - striker.getY();
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.4) {
-            double speed = 1.0 + random.nextDouble() * 0.4;
-            striker.setX(clamp(striker.getX() + (dx / dist) * speed));
+
+        if (dist > 0.6) {
+            double speed = 1.35 + random.nextDouble() * 0.75;
+            double newX = striker.getX() + (dx / dist) * speed;
+            newX = attacksRight ? Math.min(newX, maxForward) : Math.max(newX, maxForward);
+
+            striker.setX(clamp(newX));
             striker.setY(clamp(striker.getY() + (dy / dist) * speed));
         }
     }
 
-    // ==================== PAS KA NAJBLIŽEM IGRAČU ====================
-    private void tryPassToPlayer(PlayerPositionDTO carrier, List<PlayerPositionDTO> players, Random random) {
-        if (carrier == null) return;
-
-        // 80% šanse da pas bude ka najbližem (smanjeno da ne ide stalno)
-        if (random.nextDouble() > 0.8) return;
-
-        // Pronađi 4 najbliža saigrača
-        List<PlayerPositionDTO> nearby = players.stream()
-                .filter(p -> p.getTeam().equals(carrier.getTeam()) && p.getId() != carrier.getId())
-                .sorted(Comparator.comparingDouble(p -> distance(carrier, p)))
-                .limit(4)
-                .toList();
-
-        if (nearby.isEmpty()) return;
-
-        // Biramo jednog od 4 najbliža
-        PlayerPositionDTO receiver = nearby.get(random.nextInt(nearby.size()));
-
-        // Pas ka igraču: lopta ide ka njemu
-        currentCarrier = receiver;
-        ball.setX(receiver.getX());
-        ball.setY(receiver.getY());
-    }
-
-
-    // ==================== PAS U PROSTOR ====================
-    private void trySpacePass(PlayerPositionDTO carrier, List<PlayerPositionDTO> players, Random random) {
-        // NE radi pas ako nema igrač kod lopte
-        if (carrier == null) return;
-
-        // Pas se desi samo povremeno, smanjen broj puta
-        if (random.nextDouble() > 0.07) return; // ~7 šansa
-
-        // Pronađi 4 najbliža saigrača
-        List<PlayerPositionDTO> nearby = players.stream()
-                .filter(p -> p.getTeam().equals(carrier.getTeam()) && p.getId() != carrier.getId())
-                .sorted(Comparator.comparingDouble(p -> distance(carrier, p)))
-                .limit(4)
-                .toList();
-
-        if (nearby.isEmpty()) return;
-
-        // Izaberi jednog od najbližih
-        PlayerPositionDTO receiver = nearby.get(random.nextInt(nearby.size()));
-
-        // Postavi lopta kod primatelja
-        currentCarrier = receiver;
-        ball.setX(receiver.getX());
-        ball.setY(receiver.getY());
-    }
-
-
-    private void tryFinishAttack(PlayerPositionDTO carrier, List<PlayerPositionDTO> players, Random random) {
-        boolean attacksRight = carrier.getTeam().equals("HOME");
-        double dangerZone = attacksRight ? 75 : 25;
-
-        if ((attacksRight && carrier.getX() > dangerZone) || (!attacksRight && carrier.getX() < dangerZone)) {
-            long opponentsAhead = players.stream()
-                    .filter(p -> p.getTeam().equals(attacksRight ? "AWAY" : "HOME"))
-                    .filter(p -> attacksRight ? p.getX() > carrier.getX() : p.getX() < carrier.getX())
-                    .count();
-
-            if (opponentsAhead <= 2 && random.nextDouble() < 0.35) {
-                // ŠUT ka golu
-                ball.setX(attacksRight ? 98 : 2);
-                ball.setY(48 + (random.nextDouble()-0.5)*18);
-                currentCarrier = players.stream()
-                        .filter(p -> p.getTeam().equals(attacksRight ? "AWAY" : "HOME"))
-                        .min(Comparator.comparingDouble(p -> distance(ball, p)))
-                        .orElse(carrier);
-            }
-        }
-    }
-
-    // ==================== POMOĆNE FUNKCIJE ====================
-    private void pullTowardsBall(PlayerPositionDTO p, BallPositionDTO b, Random random) {
-        double toBallX = (b.getX() - p.getX()) * 0.22;
-        double toBallY = (b.getY() - p.getY()) * 0.22;
-        p.setX(clamp(p.getX() + toBallX));
-        p.setY(clamp(p.getY() + toBallY));
-    }
-
-    private void avoidCrowding(PlayerPositionDTO p, List<PlayerPositionDTO> players, Random random) {
-        for (PlayerPositionDTO other : players) {
-            if (other.getId() == p.getId() || !other.getTeam().equals(p.getTeam())) continue;
-            double dist = distance(p, other);
-            if (dist < 10.0) {
-                double dx = p.getX() - other.getX();
-                double dy = p.getY() - other.getY();
-                double len = Math.hypot(dx, dy) + 0.001;
-                p.setX(clamp(p.getX() + (dx / len) * (11.5 - dist)));
-                p.setY(clamp(p.getY() + (dy / len) * (11.5 - dist)));
-            }
-        }
-    }
-
-    private void applyIdleMovement(PlayerPositionDTO p, Random random) {
-        // stalno pomeranje gore-dole i ka centru terena
-        p.setY(clamp(p.getY() + (random.nextDouble() - 0.5) * 1.2));
-        p.setX(clamp(p.getX() + (50 - p.getX()) * 0.05));
-    }
-
-    private PlayerPositionDTO findNearbyTeammate(PlayerPositionDTO carrier, List<PlayerPositionDTO> players) {
-        List<PlayerPositionDTO> candidates = players.stream()
-                .filter(p -> p.getTeam().equals(carrier.getTeam()) && p.getId() != carrier.getId())
-                .sorted(Comparator.comparingDouble(p -> distance(carrier, p)))
-                .limit(4)
-                .toList();
-
-        if (candidates.isEmpty()) return null;
-        return candidates.get(new Random().nextInt(candidates.size()));
-    }
+    // =============================================
+    // POMOĆNE FUNKCIJE
+    // =============================================
 
     private double findOffsideLine(List<PlayerPositionDTO> players, boolean attacksRight) {
         return players.stream()
                 .filter(p -> p.getTeam().equals(attacksRight ? "AWAY" : "HOME"))
                 .mapToDouble(PlayerPositionDTO::getX)
                 .reduce(attacksRight ? 0 : 100, attacksRight ? Math::max : Math::min);
+    }
+
+    private void avoidCrowding(PlayerPositionDTO p, List<PlayerPositionDTO> players, Random random) {
+        for (PlayerPositionDTO other : players) {
+            if (other.getId() == p.getId() || !other.getTeam().equals(p.getTeam())) continue;
+
+            double dist = distance(p, other);
+            if (dist < 9.5) {                                 // ← povećano
+                double dx = p.getX() - other.getX();
+                double dy = p.getY() - other.getY();
+                double len = Math.hypot(dx, dy) + 0.001;
+
+                p.setX(clamp(p.getX() + (dx / len) * (10.0 - dist)));   // jače odguravanje
+                p.setY(clamp(p.getY() + (dy / len) * (10.0 - dist)));
+            }
+        }
+    }
+
+    private void applyIdleMovement(PlayerPositionDTO p, Random random) {
+        p.setY(clamp(p.getY() + (random.nextDouble() - 0.5) * 1.6));   // jače gore-dole
+        p.setX(clamp(p.getX() + (50 - p.getX()) * 0.09));             // lagano ka centru
     }
 
     private PlayerPositionDTO findTargetOpponent(PlayerPositionDTO player, List<PlayerPositionDTO> allPlayers,
@@ -326,18 +268,54 @@ public class CanvasSimulationService {
                 .filter(p -> p.getTeam().equals(opponentTeam))
                 .sorted(Comparator.comparingDouble(p -> distance(player, p)))
                 .limit(3)
-                .toList();
+                .collect(Collectors.toList());
+
+        if (candidates.isEmpty()) return null;
+        if (candidates.size() == 1) return candidates.get(0);
+
+        PlayerPositionDTO mostDangerous = candidates.stream()
+                .max(Comparator.comparingDouble(p -> attacksRight ? p.getX() : (100 - p.getX())))
+                .orElse(candidates.get(0));
+
+        return random.nextDouble() < 0.68 ? mostDangerous : candidates.get(random.nextInt(candidates.size()));
+    }
+
+    private PlayerPositionDTO findNearbyTeammate(PlayerPositionDTO carrier, List<PlayerPositionDTO> players) {
+        List<PlayerPositionDTO> candidates = players.stream()
+                .filter(p -> p.getId() != carrier.getId() && p.getTeam().equals(carrier.getTeam()))
+                .sorted(Comparator.comparingDouble(p -> distance(carrier, p)))
+                .limit(4)
+                .collect(Collectors.toList());
 
         if (candidates.isEmpty()) return null;
         return candidates.get(new Random().nextInt(candidates.size()));
     }
 
-    private double distance(PlayerPositionDTO a, PlayerPositionDTO b) {
-        return Math.hypot(a.getX() - b.getX(), a.getY() - b.getY());
+    private void tryFinishAttack(PlayerPositionDTO carrier, List<PlayerPositionDTO> players, Random random) {
+        boolean attacksRight = carrier.getTeam().equals("HOME");
+        double goalLine = attacksRight ? 92 : 8;
+
+        if (Math.abs(carrier.getX() - goalLine) < 14) {
+            if (random.nextDouble() < 0.42) {
+                PlayerPositionDTO back = findBackwardTeammate(carrier, players);
+                if (back != null) currentCarrier = back;
+            }
+        }
     }
 
-    private double distance(BallPositionDTO ball, PlayerPositionDTO player) {
-        return Math.hypot(ball.getX() - player.getX(), ball.getY() - player.getY());
+    private PlayerPositionDTO findBackwardTeammate(PlayerPositionDTO carrier, List<PlayerPositionDTO> players) {
+        boolean attacksRight = carrier.getTeam().equals("HOME");
+        double backX = attacksRight ? carrier.getX() - 28 : carrier.getX() + 28;
+
+        return players.stream()
+                .filter(p -> p.getTeam().equals(carrier.getTeam()) && p.getId() != carrier.getId())
+                .filter(p -> Math.abs(p.getX() - backX) < 35)
+                .min(Comparator.comparingDouble(p -> distance(carrier, p)))
+                .orElse(null);
+    }
+
+    private double distance(PlayerPositionDTO a, PlayerPositionDTO b) {
+        return Math.hypot(a.getX() - b.getX(), a.getY() - b.getY());
     }
 
     private double clamp(double val) {
